--- a/yuuki/templates/base.html
+++ b/yuuki/templates/base.html
@@ -20,6 +20,18 @@
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
+        <link rel="stylesheet" href="{% static 'css/odometer-theme-default.css' %}">
+        
+        <script src="{% static 'js/vendor/jquery-3.1.1.min.js' %}"></script>
+
+        <script src="{% static 'js/vendor/jquery.flot.js' %}"></script>
+        <script src="{% static 'js/vendor/jquery.flot.resize.js' %}"></script>
+        <script src="{% static 'js/vendor/jquery.flot.time.js' %}"></script>
+        <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/vendor/odometer.min.js' %}"></script>
+        <script src="{% static 'js/api.js' %}"></script>
+        
+        <script src="{% static 'js/main.js' %}"></script>
 
         {% block head_css %}{% endblock %}
         {% block head_javascript %}{% endblock %}
@@ -94,14 +106,7 @@
                     {% endblock %}
                 </div>
             </div>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>
-            window.jQuery || document.write("<script src=\"{% static 'js/vendor/jquery-1.11.2.min.js' %}\"><\/script>")
-        </script>
-
-        <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
-
-        <script src="{% static 'js/main.js' %}"></script>
+        
+        {% block footer_javascript %}{% endblock %}
     </body>
 </html>
