--- a/yuuki/templates/yuuki/index.html
+++ b/yuuki/templates/yuuki/index.html
@@ -4,16 +4,25 @@
 {% block head_title %}TShock Statistics{% endblock %}
 
 {% block head_css %}
-<link rel="stylesheet" href="{% static 'css/index.css' %}">
+<link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
 {% endblock %}
 
-{% block head_javascript %}{% endblock %}
+{% block head_javascript %}
+<script src="{% static 'js/vendor/date.js' %}"></script>
+<script src="{% static 'js/playerchart.js' %}"></script>
+
+<script src="{% static 'js/dashboard.js' %}"></script>
+{% endblock %}
+
+{% block footer_javascript %}{% endblock %}
+
 
 {% block navbar_inner_home %}
 <li class="active">
     <a href="{% url 'index' %}">Dashboard</a>
 </li>
 {% endblock %}
+
 
 {% block content %}
     <div class="container-flex">
@@ -47,8 +56,9 @@
 				<div class="col-lg-12">
 					<div class="panel panel-default">
 						<div class="panel-heading">Player Count Over 48 Hours <span class="chart-hint">- Within 5 minutes of accuracy</span></div>
-						<div class="panel-body chart">
-							<canvas id="history" width="1000" height="400"></canvas>
+						<div class="panel-body chart_center">
+							<div id="chartlegendUsers" class="chartLegend" ></div>
+							<div id="chartdivUsers" class="chartdiv" ></div>
 						</div>
 					</div>
 				</div>
@@ -61,7 +71,7 @@
 							<span class="glyphicon glyphicon-question-sign pull-right" aria-hidden="true" data-container="body" data-toggle="popover" data-placement="right" data-content="This is tracked by a command-line token passed to servers. If you would like a token please speak to the TShock team."></span>
 						</div>
 						<div class="panel-body chart">
-							<canvas id="providers" width="200" height="200"></canvas>
+							<canvas id="providers" class="chart"></canvas>
 						</div>
 					</div>
 				</div>
