--- a/yuuki/static/css/dashboard.css
+++ b/yuuki/static/css/dashboard.css
@@ -1,17 +1,31 @@
-.container-flex {
-    margin-left: 50px;
-    margin-right: 50px;
-}
 li {
     list-style-type: none;
 }
 dt {
     line-height: 120%;
 }
+
 .chart {
     text-align: center;
-    font-size: 50px;
+    font-size: 6vw;
 }
+
+@media only screen and (min-width: 500px) {
+  .chart {
+    text-align: center;
+    font-size: 2.5vw;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .chart {
+    text-align: center;
+    font-size: 2vw;
+  }
+}
+
+
+
 .chart-hint {
     color: #959595;
 }
@@ -25,15 +39,9 @@ dt {
 .glyphicon-question-sign {
     cursor: help;
 }
-.chartdiv
-{
-	width: auto;
-	min-width: 600px;
-	height: 350px;
-	margin-bottom: 40px;
-}
 .chart_center {
 	margin: 0 auto;
+	max-width: 1200px;
 	overflow-x: auto;
 	overflow-y: hidden;
 }
@@ -45,7 +53,7 @@ dt {
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size:12px;
 	font-weight:normal;
-	color:#8f98a0;
+	color:#5e676e;
 }
 .flot-x-axis .flot-tick-label {
 	white-space: nowrap;
@@ -53,4 +61,19 @@ dt {
 	transform-origin: top left;
 	text-align: right;
 	width:100px;
+}
+
+#chartdivUsers
+{
+	width: auto;
+	min-width: 600px;
+	height: 350px;
+	margin-bottom: 40px;
+}
+#chartdivProviders
+{
+	width: auto;
+	min-width: 200px;
+	height: 350px;
+	margin-bottom: 40px;
 }
