--- a/yuuki/staticfiles/css/dashboard.css
+++ b/yuuki/staticfiles/css/dashboard.css
@@ -1,17 +1,31 @@
-.container-flex {
-    margin-left: 50px;
-    margin-right: 50px;
-}
 li {
     list-style-type: none;
 }
 dt {
     line-height: 120%;
 }
+
 .chart {
     text-align: center;
-    font-size: 50px;
+    font-size: 6vw;
 }
+
+@media only screen and (min-width: 500px) {
+  .chart {
+    text-align: center;
+    font-size: 2.5vw;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .chart {
+    text-align: center;
+    font-size: 2vw;
+  }
+}
+
+
+
 .chart-hint {
     color: #959595;
 }
@@ -25,19 +39,41 @@ dt {
 .glyphicon-question-sign {
     cursor: help;
 }
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
+.chart_center {
+	margin: 0 auto;
+	max-width: 1200px;
+	overflow-x: auto;
+	overflow-y: hidden;
+}
+.dateAxis
+{
+	font-weight: bold;
+}
+.flot-tick-label, .legendLabel {
+	font-family:Verdana, Arial, Helvetica, sans-serif;
+	font-size:12px;
+	font-weight:normal;
+	color:#5e676e;
+}
+.flot-x-axis .flot-tick-label {
+	white-space: nowrap;
+	transform:  translate( 0px,90px ) rotate(-90deg);
+	transform-origin: top left;
+	text-align: right;
+	width:100px;
 }
 
-.x.axis path {
-  display: none;
+#chartdivUsers
+{
+	width: auto;
+	min-width: 600px;
+	height: 350px;
+	margin-bottom: 40px;
 }
-
-.line {
-  fill: none;
-  stroke: steelblue;
-  stroke-width: 1.5px;
+#chartdivProviders
+{
+	width: auto;
+	min-width: 200px;
+	height: 350px;
+	margin-bottom: 40px;
 }
