--- a/yuuki/templates/base.html
+++ b/yuuki/templates/base.html
@@ -24,9 +24,6 @@
         
         <script src="{% static 'js/vendor/jquery-3.1.1.min.js' %}"></script>
 
-        <script src="{% static 'js/vendor/jquery.flot.js' %}"></script>
-        <script src="{% static 'js/vendor/jquery.flot.resize.js' %}"></script>
-        <script src="{% static 'js/vendor/jquery.flot.time.js' %}"></script>
         <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/vendor/odometer.min.js' %}"></script>
         <script src="{% static 'js/api.js' %}"></script>
@@ -100,7 +97,8 @@
                         {% block content %}{% endblock %}
 
                         <footer>
-                            <p>&copy; 2016 NyxStudios. All rights reserved</p>
+                            <p>&copy; 2017 Pryaxis Limited. All rights reserved</p>
+                            <a href="//www.iubenda.com/privacy-policy/8150481" class="iubenda-white no-brand iubenda-embed" title="Privacy Policy">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
                         </footer>
                     </div>
                     {% endblock %}
