Added context to the stats

--- a/templates/yuuki/index.html
+++ b/templates/yuuki/index.html
@@ -32,7 +32,7 @@
 			<div class="row">
 				<div class="col-lg-4">
 					<div class="panel panel-default">
-						<div class="panel-heading">Current Players</div>
+						<div class="panel-heading">Current Players <span class="chart-hint">- (Total Players / Total Slots)</span></div>
 						<div class="panel-body chart">
 							<span id="current-players" class="odometer">0</span> / <span id="current-slots" class="odometer">0</span>
 						</div>
@@ -48,7 +48,7 @@
 				</div>
 				<div class="col-lg-4">
 					<div class="panel panel-default">
-						<div class="panel-heading">Occupied Servers</div>
+						<div class="panel-heading">Occupied Servers <span class="chart-hint">- (Non-Empty Servers / Total Servers)</span></div>
 						<div class="panel-body chart">
 							<span id="nonempty-servers" class="odometer">0</span> / <span id="all-servers" class="odometer">0</span>
 						</div>
