Updated Date library

--- a/templates/yuuki/index.html
+++ b/templates/yuuki/index.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block head_javascript %}
-<script src="static/js/vendor/date.js"></script>
+<script src="static/js/vendor/date-en-GB.js"></script>
 <script src="static/js/vendor/jquery.flot.js"></script>
 <script src="static/js/vendor/jquery.flot.resize.js"></script>
 <script src="static/js/vendor/jquery.flot.time.js"></script>
