--- a/templates/yuuki/index.html
+++ b/templates/yuuki/index.html
@@ -28,56 +28,60 @@
 
 
 {% block content %}
-    <div class="container-flex">
-			<div class="row">
-				<div class="col-lg-4">
-					<div class="panel panel-default">
-						<div class="panel-heading">Current Players <span class="chart-hint">- (Total Players / Total Slots)</span></div>
-						<div class="panel-body chart">
-							<span id="current-players" class="odometer">0</span> / <span id="current-slots" class="odometer">0</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div class="panel panel-default">
-						<div class="panel-heading">Online Servers</div>
-						<div class="panel-body chart">
-							<span id="total-servers" class="odometer">0</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div class="panel panel-default">
-						<div class="panel-heading">Occupied Servers <span class="chart-hint">- (Non-Empty Servers / Total Servers)</span></div>
-						<div class="panel-body chart">
-							<span id="nonempty-servers" class="odometer">0</span> / <span id="all-servers" class="odometer">0</span>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="panel panel-default">
-						<div class="panel-heading">Player Count Over 48 Hours <span class="chart-hint">- Within 5 minutes of accuracy</span></div>
-						<div class="panel-body chart_center">
-							<div id="chartlegendUsers" class="chartLegend" ></div>
-							<div id="chartdivUsers" class="chartdiv" ></div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-4">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							Server Providers
-							<span class="glyphicon glyphicon-question-sign pull-right" aria-hidden="true" data-trigger="hover" data-container="body" data-toggle="popover" data-placement="right" data-content="This is tracked by a command-line token passed to servers. If you would like a token please speak to the TShock team."></span>
-						</div>
-						<div class="panel-body chart">
-							<div id="chartdivProviders" class="chartdiv" ></div>
-						</div>
-					</div>
-				</div>
-			</div>
+<div class="container-flex">
+    <div class="alert alert-danger" role="alert">
+        <p>Unfortunately, our database is currently offline, so we can't show you stats right now.</p>
+        <p>Check back later!</p>
     </div>
+    <div class="row">
+        <div class="col-lg-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">Current Players <span class="chart-hint">- (Total Players / Total Slots)</span></div>
+                <div class="panel-body chart">
+                    <span id="current-players" class="odometer">0</span> / <span id="current-slots" class="odometer">0</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">Online Servers</div>
+                <div class="panel-body chart">
+                    <span id="total-servers" class="odometer">0</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">Occupied Servers <span class="chart-hint">- (Non-Empty Servers / Total Servers)</span></div>
+                <div class="panel-body chart">
+                    <span id="nonempty-servers" class="odometer">0</span> / <span id="all-servers" class="odometer">0</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">Player Count Over 48 Hours <span class="chart-hint">- Within 5 minutes of accuracy</span></div>
+                <div class="panel-body chart_center">
+                    <div id="chartlegendUsers" class="chartLegend" ></div>
+                    <div id="chartdivUsers" class="chartdiv" ></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Server Providers
+                    <span class="glyphicon glyphicon-question-sign pull-right" aria-hidden="true" data-trigger="hover" data-container="body" data-toggle="popover" data-placement="right" data-content="This is tracked by a command-line token passed to servers. If you would like a token please speak to the TShock team."></span>
+                </div>
+                <div class="panel-body chart">
+                    <div id="chartdivProviders" class="chartdiv" ></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
